# maskies

./: .gitignore  CHANGELOG.md  Keys.hi  Keys.hs  LICENSE  Main  Main.hi  Main.hs  Maskies  NameValidation.hi  NameValidation.hs  README.md  Setup.hs  Stages.hi  Stages.hs  TextHelper.hi  TextHelper.hs  maskies.cabal  matice.cabal  stack.yaml  wire-1.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
profiling/: Maskies-Profiling.hp  Maskies-Profiling.prof  README.md  cabal.project.local  profiling.cabal
profiling/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/main/haskell/: .Stages.hs.swo  Keys.hi  Keys.hs  Main.hi  Main.hs  Makefile  Maskies  NameValidation.hi  NameValidation.hs  Stages.hi  Stages.hs  TextHelper.hi  TextHelper.hs  TextWrapper.hs  compile.sh
src/test/: MaskiesWireTest  README.md  maskieswiretest.cabal
src/test/bash/: result-20210211t1203.txt  results-20210209t1917.txt  results-20210209t1924.txt  results-20210209t2257.txt  results-20210210t0551.txt  results-20210210t0558.txt  results-20210210t0602.txt  results-20210210t0605.txt  test  test.sh
src/test/dist-newstyle/cache/: elaborated-plan  improved-plan  plan.json  source-hashes
src/test/haskell/: MaskiesWireTest.hi  MaskiesWireTest.hs
src/test/resources/: wire-11.txt  wire-14.txt  wire-15.txt  wire-16.txt  wire-17.txt  wire-18.txt  wire-19.txt  wire-2.txt  wire-20.txt  wire-21.txt  wire-22.txt  wire-3.txt  wire-4.txt  wire-9.txt
test/: .README.md.swp  .wire-13.txt.swp  LICENSE  MaskiesWireTest  MaskiesWireTest.hi  MaskiesWireTest.hs  README.md  maskieswiretest.cabal  name-1.txt  results-20200904t2237.txt  test  wire-1.txt  wire-10.txt  wire-11.txt  wire-12.txt  wire-13.txt  wire-2.txt  wire-5.txt  wire-6.txt  wire-7.txt  wire-8.txt  wire-9.txt  wire-n2.txt  wire-n3.txt  wire-n5.txt
test/dist-newstyle/cache/: config  elaborated-plan  improved-plan  solver-plan  up-to-date
