cabal-version:       >=1.10
-- For further documentation, see http://haskell.org/cabal/users-guide/

name:                maskies
version:             0.2.0.3
synopsis:            Text-based horror adventure game
description:         Find out what is killing the security guards, and why. And maybe stop them.
bug-reports:         aev@sdf.org
license:             OtherLicense
license-file:        LICENSE
author:              A.E.Veltstra
maintainer:          aev@sdf.org
copyright:           2020 A.E.Veltstra & T.R.Veltstra
category:            Games
build-type:          Simple
stability:           Experimental
extra-source-files:  CHANGELOG.md
                     README.md
tested-with:         GHC == 8.8.3

executable Maskies
  main-is:             Main.hs
  other-modules:       TextHelper
                       , NameValidation
                       , Keys
                       , Stages
  -- other-extensions:
  build-depends:       base >= 4.13 && < 5
                       , random >= 1.2.0 && < 1.3
                       , text >= 1.2.4 && < 1.3
  hs-source-dirs:      ./src/main/haskell
  ghc-options:         -package random
  default-language:    Haskell2010
