cabal-version:      >=1.10
name:               maskies
version:            0.2.0.6
license:            OtherLicense
license-file:       LICENSE
copyright:          2020 A.E.Veltstra & T.R.Veltstra
maintainer:         aev@sdf.org
author:             A.E.Veltstra
stability:          Experimental
tested-with:        ghc ==8.8.3
bug-reports:        aev@sdf.org
synopsis:           Text-based horror adventure game
description:
    Find out what is killing the security guards, and why. And maybe stop them.

category:           Games
build-type:         Simple
extra-source-files:
    CHANGELOG.md
    README.md

executable Maskies
    main-is:          Main.hs
    hs-source-dirs:   ./src/main/haskell
    other-modules:
        TextHelper
        NameValidation
        Keys
        Stages

    default-language: Haskell2010
    ghc-options:      -O2 -threaded
    build-depends:
        base >=4.13.0.0 && <4.14,
        random >=1.2.0 && <1.3,
        text >=1.2.4.0 && <1.3,
        brick ==0.55.*
