cabal-version:      3.0
name:               maskies
version:            0.2.0.14
synopsis:           Text-based horror adventure game
description:        Find out what is killing the security guards, and why. And maybe stop them.
bug-reports:        aev@sdf.org
license:            CC-BY-NC-4.0
license-file:       LICENSE
author:             A.E.Veltstra
maintainer:         aev@sdf.org
copyright:          2020 A.E.Veltstra & T.R.Veltstra
stability:          Experimental
category:           Games
build-type:         Simple
extra-source-files: CHANGELOG.md
                    README.md
tested-with:        GHC == { 8.8.3, 8.8.4 }

executable Maskies
    main-is:          Main.hs
    hs-source-dirs:   ./src/main/haskell
    -- other-exensions:  OverloadedStrings
    other-modules:    NameValidation
                      , Keys
                      , Stages
                      , TextWrapper
    default-language: Haskell2010
    ghc-options:      -Wall 
                      -Wincomplete-uni-patterns
    build-depends: base >=4.11.0.0 && <5,
                   random >=1.1 && <1.3,
                   text >=1.2.4.0 && <1.3,
                   terminal-size >= 0.3.2.1,
                   word-wrap >= 0.4.1
