cabal-version:       >=1.10
-- For further documentation, see http://haskell.org/cabal/users-guide/

name:                maskies-profiling
version:             0.2.0.5
synopsis:            Profiling build for the text-based horror adventure game
description:         Separated into own folder due to limitations encountered when combined.
bug-reports:         aev@sdf.org
--license:             OtherLicense
--license-file:        LICENSE
author:              A.E.Veltstra
maintainer:          aev@sdf.org
copyright:           2020 A.E.Veltstra & T.R.Veltstra
category:            Games
build-type:          Simple
stability:           Experimental
--extra-source-files:  CHANGELOG.md
--                     README.md
tested-with:         GHC == 8.8.3

executable Maskies-Profiling
  main-is:             Main.hs
  other-modules:       TextHelper
                       , NameValidation
                       , Keys
                       , Stages
  build-depends:       base >= 4.13 && < 5
                       , random >= 1.2.0 && < 1.3
                       , text >= 1.2.4 && < 1.3
  hs-source-dirs:      ../src/main/haskell
  ghc-options:         -package random
                       -threaded
                       -fprof-auto
                       -rtsopts
                       "-with-rtsopts=-N -p -h -i1"
  default-language:    Haskell2010

